docs/V2/telegram.mdx
---
title: Telegram
sidebar_position: 5
description: Get the most recent, raw telegram from the P1 Meter.
toc_min_heading_level: 3
---

import Badge from '@site/src/components/Badge.js'
import PreliminaryWarning from '@site/src/components/PreliminaryWarning.js'

# Telegram `/api/telegram`

<Badge color='hw-green' icon='mdi:check' subtext='Supported'>
    P1 Meter
</Badge>
<Badge color='hw-grey' icon='mdi:close' subtext='Not supported'>
    {' '}
    Energy Socket
</Badge>
<Badge color='hw-grey' icon='mdi:close' subtext='Not supported'>
    {' '}
    Energy Display
</Badge>
<Badge color='hw-grey' icon='mdi:close' subtext='Not supported'>
    {' '}
    kWh Meter
</Badge>
<Badge color='hw-grey' icon='mdi:close' subtext='Not supported'>
    {' '}
    Watermeter
</Badge>
<Badge color='hw-grey' icon='mdi:close' subtext='Not supported'>
    {' '}
    Plug-In Battery
</Badge>
<br />
<sub>_See [Supported Devices](/docs/introduction#devices) for more information._</sub>

---

<PreliminaryWarning />

The `/api/telegram` endpoint returns the most recent, valid telegram that was given by the P1 Meter.

-   The checksum is validated when present, telegrams with an invalid checksum are rejected.
-   The telegram is not processed in any other form, and can be used by other systems to process the data.
-   If you need parsed data, use the [measurement](/docs/v2/measurement) endpoint.

## Example

```http title="Request"
curl https://<IP ADDRESS>/api/telegram --insecure \
  -H "Authorization: Bearer <TOKEN>" \
  -H "X-Api-Version: 2" \
  -h "Accept: text/plain"
```

```http title="Response"
https/1.1 200 OK
Content-Type: text/plain

/ISK5\\2M550T-10111-

3:0.2.8(50)
0-0:1.0.0(181106140429W)
0-0:96.1.1(31333631353032362020202020202020)
1-0:1.8.1(10830.511*kWh)
1-0:1.8.2(002948.827*kWh)
1-0:2.8.1(001285.951*kWh)
1-0:2.8.2(002876.514*kWh)
0-0:96.14.0(0002)
1-0:1.7.0(21.100*kW)
1-0:2.7.0(00.000*kW)
0-0:96.7.21(00006)
0-0:96.7.9(00003)
1-0:99.97.0(1)(0-0:96.7.19)(180529135630S)(0000002451*s)
1-0:32.32.0(00003)
1-0:52.32.0(00002)
1-0:72.32.0(00002)
1-0:32.36.0(00001)
1-0:52.36.0(00001)
1-0:72.36.0(00001)
0-0:96.13.0()
1-0:32.7.0(236.0*V)
1-0:52.7.0(232.6*V)
1-0:72.7.0(235.1*V)
1-0:31.7.0(002*A)
1-0:51.7.0(000*A)
1-0:71.7.0(000*A)
1-0:21.7.0(00.000*kW)
1-0:41.7.0(00.033*kW)
1-0:61.7.0(00.132*kW)
1-0:22.7.0(00.676*kW)
1-0:42.7.0(00.000*kW)
1-0:62.7.0(00.000*kW)
0-1:24.1.0(003)
0-1:96.1.0(4730303339303031373030343630313137)
0-1:24.2.1(210606140010W)(02569.646*m3)
!1F28
```

## Error Handling

When no telegram is received, the response will return a `503 Service Unavailable` status code.

```http title="Request"
curl https://<IP ADDRESS>/api/telegram --insecure \
  -H "Authorization: Bearer <TOKEN>"
  -H "X-Api-Version: 2" \
  -h "Accept: text/plain"
```

```http title="Response"
https/1.1 503 Service Unavailable
Content-Type: text/plain

telegram:no-telegram-received
```
